Fix minor alignment issues in EQ

--- a/css/equalizer-window.css
+++ b/css/equalizer-window.css
@@ -123,7 +123,7 @@
 
 #winamp2-js #preamp {
   position: absolute;
-  left: 19px;
+  left: 21px;
   top: 38px;
 }
 
@@ -153,61 +153,61 @@
 
 #winamp2-js #band-60 {
   position: absolute;
-  left: 79px;
+  left: 78px;
   top: 38px;
 }
 
 #winamp2-js #band-170 {
   position: absolute;
-  left: 97px;
+  left: 96px;
   top: 38px;
 }
 
 #winamp2-js #band-310 {
   position: absolute;
-  left: 115px;
+  left: 114px;
   top: 38px;
 }
 
 #winamp2-js #band-600 {
   position: absolute;
-  left: 133px;
+  left: 132px;
   top: 38px;
 }
 
 #winamp2-js #band-1000 {
   position: absolute;
-  left: 151px;
+  left: 150px;
   top: 38px;
 }
 
 #winamp2-js #band-3000 {
   position: absolute;
-  left: 169px;
+  left: 168px;
   top: 38px;
 }
 
 #winamp2-js #band-6000 {
   position: absolute;
-  left: 187px;
+  left: 186px;
   top: 38px;
 }
 
 #winamp2-js #band-12000 {
   position: absolute;
-  left: 205px;
+  left: 204px;
   top: 38px;
 }
 
 #winamp2-js #band-14000 {
   position: absolute;
-  left: 223px;
+  left: 222px;
   top: 38px;
 }
 
 #winamp2-js #band-16000 {
   position: absolute;
-  left: 241px;
+  left: 240px;
   top: 38px;
 }
 
